bundle/upstream/manifests/quay-bridge-operator-controller-manager-metrics-service_v1_service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    name: quay-bridge-operator
  name: quay-bridge-operator-controller-manager-metrics-service
spec:
  ports:
  - name: https
    port: 8443
    targetPort: https
  selector:
    name: quay-bridge-operator
status:
  loadBalancer: {}
